superset of features, implemented resampling

--- a/notebooks/SMOTE workflow biodegradable.ipynb
+++ b/notebooks/SMOTE workflow biodegradable.ipynb
@@ -27,6 +27,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nAcid</th>\n",
+       "      <th>ALogP</th>\n",
+       "      <th>ALogp2</th>\n",
+       "      <th>AMR</th>\n",
+       "      <th>apol</th>\n",
+       "      <th>naAromAtom</th>\n",
+       "      <th>nAromBond</th>\n",
+       "      <th>nAtom</th>\n",
+       "      <th>nHeavyAtom</th>\n",
+       "      <th>nH</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AMW</th>\n",
+       "      <th>WTPT-1</th>\n",
+       "      <th>WTPT-2</th>\n",
+       "      <th>WTPT-3</th>\n",
+       "      <th>WTPT-4</th>\n",
+       "      <th>WTPT-5</th>\n",
+       "      <th>WPATH</th>\n",
+       "      <th>WPOL</th>\n",
+       "      <th>XLogP</th>\n",
+       "      <th>Zagreb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.4894</td>\n",
+       "      <td>6.197112</td>\n",
+       "      <td>38.0018</td>\n",
+       "      <td>35.363032</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>11</td>\n",
+       "      <td>24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.462509</td>\n",
+       "      <td>20.828762</td>\n",
+       "      <td>1.893524</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>220</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6.599</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.4296</td>\n",
+       "      <td>0.184556</td>\n",
+       "      <td>18.5395</td>\n",
+       "      <td>13.176344</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.542886</td>\n",
+       "      <td>9.148995</td>\n",
+       "      <td>1.829799</td>\n",
+       "      <td>2.705816</td>\n",
+       "      <td>2.705816</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.628</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.5003</td>\n",
+       "      <td>0.250300</td>\n",
+       "      <td>45.6856</td>\n",
+       "      <td>29.290274</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.937350</td>\n",
+       "      <td>22.828595</td>\n",
+       "      <td>1.902383</td>\n",
+       "      <td>11.163248</td>\n",
+       "      <td>11.163248</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>286</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.646</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.3087</td>\n",
+       "      <td>0.095296</td>\n",
+       "      <td>8.5717</td>\n",
+       "      <td>4.697586</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.201096</td>\n",
+       "      <td>4.914214</td>\n",
+       "      <td>1.638071</td>\n",
+       "      <td>4.414214</td>\n",
+       "      <td>4.414214</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.316</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.8561</td>\n",
+       "      <td>0.732907</td>\n",
+       "      <td>50.2372</td>\n",
+       "      <td>34.143860</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.004005</td>\n",
+       "      <td>26.661622</td>\n",
+       "      <td>1.904402</td>\n",
+       "      <td>11.202922</td>\n",
+       "      <td>11.202922</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>444</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.211</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1444 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nAcid   ALogP    ALogp2      AMR       apol  naAromAtom  nAromBond  nAtom  \\\n",
+       "0    0.0 -2.4894  6.197112  38.0018  35.363032         0.0          0     35   \n",
+       "1    0.0 -0.4296  0.184556  18.5395  13.176344         0.0          0     13   \n",
+       "2    0.0 -0.5003  0.250300  45.6856  29.290274         0.0          0     30   \n",
+       "3    1.0 -0.3087  0.095296   8.5717   4.697586         0.0          0      5   \n",
+       "4    0.0 -0.8561  0.732907  50.2372  34.143860         0.0          0     34   \n",
+       "\n",
+       "   nHeavyAtom  nH  ...       AMW     WTPT-1    WTPT-2     WTPT-3     WTPT-4  \\\n",
+       "0          11  24  ...  4.462509  20.828762  1.893524   0.000000   0.000000   \n",
+       "1           5   8  ...  5.542886   9.148995  1.829799   2.705816   2.705816   \n",
+       "2          12  18  ...  5.937350  22.828595  1.902383  11.163248  11.163248   \n",
+       "3           3   2  ...  9.201096   4.914214  1.638071   4.414214   4.414214   \n",
+       "4          14  20  ...  6.004005  26.661622  1.904402  11.202922  11.202922   \n",
+       "\n",
+       "   WTPT-5  WPATH  WPOL  XLogP  Zagreb  \n",
+       "0     0.0    220     8  6.599      38  \n",
+       "1     0.0     17     2  0.628      22  \n",
+       "2     0.0    286     9 -0.646      42  \n",
+       "3     0.0      4     0 -0.316       6  \n",
+       "4     0.0    444    11  1.211      52  \n",
+       "\n",
+       "[5 rows x 1444 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biodeg.head()\n",
+    "colnaming = biodeg.iloc[:,4:]\n",
+    "colnaming.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -2725,6 +2936,387 @@
     "\n",
     "x_test = all_test.iloc[:,2:]\n",
     "y_test = all_test.iloc[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([  0,   2,   3,   4,   5,  11,  12,  13,  14,  15,\n",
+       "            ...\n",
+       "            935, 939, 941, 942, 943, 945, 951, 957, 968, 995],\n",
+       "           dtype='int64', length=296)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bd_columns = all_train.columns\n",
+    "len(bd_columns)\n",
+    "bd_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_columns = pd.read_csv('drug_feature_names.csv', sep=',', header=None)\n",
+    "dl_columns = dl_columns[0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(setdb & setdl): {'ATSC2v', 'GATS3v', 'nO', 'ATSC5m', 'ATSC2c', 'ATSC3m', 'AATS8m', 'ATSC0c', 'GATS8e', 'nddC', 'nAcid', 'minHCsats', 'SPC-4', 'AATSC4m', 'ATSC4v', 'ATSC7e', 'ATSC8c', 'nN', 'nHBint6', 'AATSC7m', 'ATSC8e', 'minHdsCH', 'nHssNH2p', 'AATS8s', 'AATSC7i', 'nBr', 'ATSC3c', 'AATS7s', 'GATS2m', 'AATSC0v', 'nS', 'ATSC4m', 'ATSC5c', 'AATSC6m', 'nHsssNHp', 'minHCsatu', 'AATSC8i', 'ATSC2m', 'mindO', 'AATSC8c', 'ATSC1m', 'ATSC1v', 'GATS3m', 'AATSC7e', 'nHBint3', 'AATSC8e', 'AATSC6e', 'SC-3', 'AATSC8m', 'AATSC7v', 'ATSC3v', 'AATSC5m', 'ATSC7c', 'AMR', 'nHBint4', 'nHmisc', 'C2SP1', 'MATS6m', 'ATSC2i', 'GATS6m', 'AATSC7c', 'nHBint9', 'ATSC7m', 'ATSC8m', 'nsssCH', 'nF', 'SP-0', 'nP', 'ATSC7v', 'ATSC1e', 'SC-4', 'SsI', 'MATS8m', 'ATSC5v', 'nCl', 'ATSC4c', 'AATSC8v', 'ALogp2', 'minssCH2', 'ATSC2e'} size: 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "bd = set(colnames)\n",
+    "dl = set(dl_columns)\n",
+    "print(\"(setdb & setdl):\", bd & dl, \"size:\", len(bd & dl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames = []\n",
+    "for pos in bd_columns:\n",
+    "    colname = colnaming.columns[pos]\n",
+    "    colnames.append(colname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['nAcid',\n",
+       " 'ALogp2',\n",
+       " 'AMR',\n",
+       " 'apol',\n",
+       " 'naAromAtom',\n",
+       " 'nC',\n",
+       " 'nN',\n",
+       " 'nO',\n",
+       " 'nS',\n",
+       " 'nP',\n",
+       " 'nF',\n",
+       " 'nCl',\n",
+       " 'nBr',\n",
+       " 'ATS2s',\n",
+       " 'ATS6s',\n",
+       " 'ATS8s',\n",
+       " 'AATS6m',\n",
+       " 'AATS8m',\n",
+       " 'AATS2v',\n",
+       " 'AATS5v',\n",
+       " 'AATS6v',\n",
+       " 'AATS7v',\n",
+       " 'AATS8v',\n",
+       " 'AATS0e',\n",
+       " 'AATS2p',\n",
+       " 'AATS5p',\n",
+       " 'AATS2i',\n",
+       " 'AATS5i',\n",
+       " 'AATS6i',\n",
+       " 'AATS0s',\n",
+       " 'AATS1s',\n",
+       " 'AATS2s',\n",
+       " 'AATS3s',\n",
+       " 'AATS4s',\n",
+       " 'AATS5s',\n",
+       " 'AATS7s',\n",
+       " 'AATS8s',\n",
+       " 'ATSC0c',\n",
+       " 'ATSC1c',\n",
+       " 'ATSC2c',\n",
+       " 'ATSC3c',\n",
+       " 'ATSC4c',\n",
+       " 'ATSC5c',\n",
+       " 'ATSC7c',\n",
+       " 'ATSC8c',\n",
+       " 'ATSC0m',\n",
+       " 'ATSC1m',\n",
+       " 'ATSC2m',\n",
+       " 'ATSC3m',\n",
+       " 'ATSC4m',\n",
+       " 'ATSC5m',\n",
+       " 'ATSC7m',\n",
+       " 'ATSC8m',\n",
+       " 'ATSC0v',\n",
+       " 'ATSC1v',\n",
+       " 'ATSC2v',\n",
+       " 'ATSC3v',\n",
+       " 'ATSC4v',\n",
+       " 'ATSC5v',\n",
+       " 'ATSC7v',\n",
+       " 'ATSC1e',\n",
+       " 'ATSC2e',\n",
+       " 'ATSC7e',\n",
+       " 'ATSC8e',\n",
+       " 'ATSC0p',\n",
+       " 'ATSC1p',\n",
+       " 'ATSC2p',\n",
+       " 'ATSC7p',\n",
+       " 'ATSC2i',\n",
+       " 'ATSC3i',\n",
+       " 'ATSC0s',\n",
+       " 'ATSC1s',\n",
+       " 'ATSC2s',\n",
+       " 'ATSC3s',\n",
+       " 'ATSC4s',\n",
+       " 'ATSC5s',\n",
+       " 'ATSC6s',\n",
+       " 'ATSC7s',\n",
+       " 'ATSC8s',\n",
+       " 'AATSC1c',\n",
+       " 'AATSC2c',\n",
+       " 'AATSC3c',\n",
+       " 'AATSC4c',\n",
+       " 'AATSC5c',\n",
+       " 'AATSC6c',\n",
+       " 'AATSC7c',\n",
+       " 'AATSC8c',\n",
+       " 'AATSC0m',\n",
+       " 'AATSC2m',\n",
+       " 'AATSC4m',\n",
+       " 'AATSC5m',\n",
+       " 'AATSC6m',\n",
+       " 'AATSC7m',\n",
+       " 'AATSC8m',\n",
+       " 'AATSC0v',\n",
+       " 'AATSC1v',\n",
+       " 'AATSC3v',\n",
+       " 'AATSC4v',\n",
+       " 'AATSC5v',\n",
+       " 'AATSC6v',\n",
+       " 'AATSC7v',\n",
+       " 'AATSC8v',\n",
+       " 'AATSC0e',\n",
+       " 'AATSC1e',\n",
+       " 'AATSC3e',\n",
+       " 'AATSC4e',\n",
+       " 'AATSC5e',\n",
+       " 'AATSC6e',\n",
+       " 'AATSC7e',\n",
+       " 'AATSC8e',\n",
+       " 'AATSC1p',\n",
+       " 'AATSC2p',\n",
+       " 'AATSC3p',\n",
+       " 'AATSC5p',\n",
+       " 'AATSC7i',\n",
+       " 'AATSC8i',\n",
+       " 'AATSC0s',\n",
+       " 'AATSC1s',\n",
+       " 'AATSC5s',\n",
+       " 'MATS6m',\n",
+       " 'MATS8m',\n",
+       " 'MATS2v',\n",
+       " 'MATS6v',\n",
+       " 'MATS7v',\n",
+       " 'MATS8v',\n",
+       " 'MATS1e',\n",
+       " 'MATS2e',\n",
+       " 'MATS3e',\n",
+       " 'MATS4e',\n",
+       " 'MATS5e',\n",
+       " 'MATS6e',\n",
+       " 'MATS7e',\n",
+       " 'MATS8e',\n",
+       " 'MATS1p',\n",
+       " 'MATS2p',\n",
+       " 'MATS4p',\n",
+       " 'MATS5p',\n",
+       " 'MATS6p',\n",
+       " 'MATS7p',\n",
+       " 'MATS2i',\n",
+       " 'MATS3i',\n",
+       " 'MATS6i',\n",
+       " 'MATS8i',\n",
+       " 'GATS2m',\n",
+       " 'GATS3m',\n",
+       " 'GATS6m',\n",
+       " 'GATS3v',\n",
+       " 'GATS5e',\n",
+       " 'GATS6e',\n",
+       " 'GATS7e',\n",
+       " 'GATS8e',\n",
+       " 'GATS5s',\n",
+       " 'GATS7s',\n",
+       " 'GATS8s',\n",
+       " 'SpDiam_Dze',\n",
+       " 'SpAD_Dze',\n",
+       " 'VE2_Dze',\n",
+       " 'VE3_Dze',\n",
+       " 'VR1_Dze',\n",
+       " 'SpAbs_Dzp',\n",
+       " 'SpMax_Dzp',\n",
+       " 'VE1_Dzp',\n",
+       " 'VE3_Dzp',\n",
+       " 'SpAbs_Dzi',\n",
+       " 'SpMax_Dzi',\n",
+       " 'VE1_Dzi',\n",
+       " 'VE2_Dzi',\n",
+       " 'VE3_Dzi',\n",
+       " 'VR3_Dzi',\n",
+       " 'SpAbs_Dzs',\n",
+       " 'SpDiam_Dzs',\n",
+       " 'bpol',\n",
+       " 'SpMax1_Bhm',\n",
+       " 'SpMax2_Bhm',\n",
+       " 'SpMax3_Bhm',\n",
+       " 'SpMax4_Bhe',\n",
+       " 'SpMax5_Bhp',\n",
+       " 'SpMax7_Bhp',\n",
+       " 'SpMax8_Bhp',\n",
+       " 'SpMin2_Bhp',\n",
+       " 'SpMin3_Bhp',\n",
+       " 'SpMin4_Bhp',\n",
+       " 'SpMin8_Bhp',\n",
+       " 'SpMax4_Bhi',\n",
+       " 'SpMax6_Bhi',\n",
+       " 'SpMin6_Bhs',\n",
+       " 'C1SP1',\n",
+       " 'C2SP1',\n",
+       " 'VCH-7',\n",
+       " 'SC-3',\n",
+       " 'SC-4',\n",
+       " 'VC-3',\n",
+       " 'VC-4',\n",
+       " 'SPC-4',\n",
+       " 'SPC-5',\n",
+       " 'SPC-6',\n",
+       " 'VPC-4',\n",
+       " 'VPC-5',\n",
+       " 'VPC-6',\n",
+       " 'SP-0',\n",
+       " 'SP-1',\n",
+       " 'SP-2',\n",
+       " 'SP-3',\n",
+       " 'SP-4',\n",
+       " 'SP-5',\n",
+       " 'SP-6',\n",
+       " 'ASP-0',\n",
+       " 'ASP-2',\n",
+       " 'ASP-4',\n",
+       " 'VP-0',\n",
+       " 'VP-7',\n",
+       " 'AVP-0',\n",
+       " 'AVP-2',\n",
+       " 'AVP-3',\n",
+       " 'AVP-4',\n",
+       " 'AVP-7',\n",
+       " 'Sse',\n",
+       " 'nwHBa',\n",
+       " 'nHBint3',\n",
+       " 'nHBint4',\n",
+       " 'nHBint6',\n",
+       " 'nHBint9',\n",
+       " 'nHssNH2p',\n",
+       " 'nHsssNHp',\n",
+       " 'nHaaCH',\n",
+       " 'nHother',\n",
+       " 'nHmisc',\n",
+       " 'nsLi',\n",
+       " 'nssBe',\n",
+       " 'nssssBem',\n",
+       " 'nsBH2',\n",
+       " 'nssBH',\n",
+       " 'nsssB',\n",
+       " 'nssssBm',\n",
+       " 'nsCH3',\n",
+       " 'nsssCH',\n",
+       " 'nddC',\n",
+       " 'ntsC',\n",
+       " 'naasC',\n",
+       " 'nssssC',\n",
+       " 'nsNH2',\n",
+       " 'nssNH2p',\n",
+       " 'nssssSi',\n",
+       " 'nsPH2',\n",
+       " 'ndsssP',\n",
+       " 'nddsP',\n",
+       " 'nssSe',\n",
+       " 'nssssssSe',\n",
+       " 'nddssSe',\n",
+       " 'SHBint2',\n",
+       " 'SHBint4',\n",
+       " 'SHsNH3p',\n",
+       " 'SHssNH2p',\n",
+       " 'SHsssNHp',\n",
+       " 'SHdCH2',\n",
+       " 'SHother',\n",
+       " 'SssBe',\n",
+       " 'SsCH3',\n",
+       " 'SssCH2',\n",
+       " 'SdssC',\n",
+       " 'SaasC',\n",
+       " 'SdsN',\n",
+       " 'SssGeH2',\n",
+       " 'SsAsH2',\n",
+       " 'SssAsH',\n",
+       " 'SsssAs',\n",
+       " 'SddsAs',\n",
+       " 'SdSe',\n",
+       " 'SssSe',\n",
+       " 'SdssSe',\n",
+       " 'SssssssSe',\n",
+       " 'SsBr',\n",
+       " 'SsSnH3',\n",
+       " 'SssSnH2',\n",
+       " 'SsssSnH',\n",
+       " 'SssssSn',\n",
+       " 'SsI',\n",
+       " 'SssPbH2',\n",
+       " 'minHtCH',\n",
+       " 'minHdCH2',\n",
+       " 'minHdsCH',\n",
+       " 'minHCHnX',\n",
+       " 'minHCsats',\n",
+       " 'minHCsatu',\n",
+       " 'minHAvin',\n",
+       " 'minHother',\n",
+       " 'minssssBem',\n",
+       " 'minssssBm',\n",
+       " 'mindCH2',\n",
+       " 'minssCH2',\n",
+       " 'mintCH',\n",
+       " 'minaaCH',\n",
+       " 'minaaaC',\n",
+       " 'minssNH',\n",
+       " 'mindO',\n",
+       " 'minsssGeH']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colnames"
    ]
   },
   {
