--- a/notebooks/SMOTE workflow druglike.ipynb
+++ b/notebooks/SMOTE workflow druglike.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[5 rows x 296 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        " [5 rows x 279 columns], None)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,6 +422,313 @@
     "\n",
     "x_test = all_test.drop(['Class'], axis=1)\n",
     "y_test = all_test['Class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"drug_feature_names.csv\", columns, delimiter=\",\", fmt='%s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nAcid\n",
+      "ALogP\n",
+      "ALogp2\n",
+      "AMR\n",
+      "nN\n",
+      "nO\n",
+      "nS\n",
+      "nP\n",
+      "nF\n",
+      "nCl\n",
+      "nBr\n",
+      "nI\n",
+      "ATS0m\n",
+      "AATS0m\n",
+      "AATS1m\n",
+      "AATS7m\n",
+      "AATS8m\n",
+      "AATS8e\n",
+      "AATS7s\n",
+      "AATS8s\n",
+      "ATSC0c\n",
+      "ATSC2c\n",
+      "ATSC3c\n",
+      "ATSC4c\n",
+      "ATSC5c\n",
+      "ATSC6c\n",
+      "ATSC7c\n",
+      "ATSC8c\n",
+      "ATSC1m\n",
+      "ATSC2m\n",
+      "ATSC3m\n",
+      "ATSC4m\n",
+      "ATSC5m\n",
+      "ATSC6m\n",
+      "ATSC7m\n",
+      "ATSC8m\n",
+      "ATSC1v\n",
+      "ATSC2v\n",
+      "ATSC3v\n",
+      "ATSC4v\n",
+      "ATSC5v\n",
+      "ATSC6v\n",
+      "ATSC7v\n",
+      "ATSC8v\n",
+      "ATSC1e\n",
+      "ATSC2e\n",
+      "ATSC3e\n",
+      "ATSC4e\n",
+      "ATSC5e\n",
+      "ATSC6e\n",
+      "ATSC7e\n",
+      "ATSC8e\n",
+      "ATSC1i\n",
+      "ATSC2i\n",
+      "ATSC4i\n",
+      "ATSC7i\n",
+      "AATSC0c\n",
+      "AATSC7c\n",
+      "AATSC8c\n",
+      "AATSC4m\n",
+      "AATSC5m\n",
+      "AATSC6m\n",
+      "AATSC7m\n",
+      "AATSC8m\n",
+      "AATSC0v\n",
+      "AATSC7v\n",
+      "AATSC8v\n",
+      "AATSC6e\n",
+      "AATSC7e\n",
+      "AATSC8e\n",
+      "AATSC0p\n",
+      "AATSC8p\n",
+      "AATSC6i\n",
+      "AATSC7i\n",
+      "AATSC8i\n",
+      "MATS1c\n",
+      "MATS6m\n",
+      "MATS7m\n",
+      "MATS8m\n",
+      "MATS1s\n",
+      "MATS3s\n",
+      "GATS1c\n",
+      "GATS2c\n",
+      "GATS3c\n",
+      "GATS4c\n",
+      "GATS5c\n",
+      "GATS6c\n",
+      "GATS7c\n",
+      "GATS8c\n",
+      "GATS1m\n",
+      "GATS2m\n",
+      "GATS3m\n",
+      "GATS4m\n",
+      "GATS5m\n",
+      "GATS6m\n",
+      "GATS7m\n",
+      "GATS8m\n",
+      "GATS2v\n",
+      "GATS3v\n",
+      "GATS4v\n",
+      "GATS5v\n",
+      "GATS6v\n",
+      "GATS7v\n",
+      "GATS8v\n",
+      "GATS1e\n",
+      "GATS3e\n",
+      "GATS8e\n",
+      "GATS6i\n",
+      "GATS7i\n",
+      "GATS1s\n",
+      "SM1_DzZ\n",
+      "VE1_DzZ\n",
+      "VE3_DzZ\n",
+      "VR1_DzZ\n",
+      "VE1_Dzv\n",
+      "VR1_Dzv\n",
+      "SM1_Dzs\n",
+      "VE1_Dzs\n",
+      "VE3_Dzs\n",
+      "nBase\n",
+      "BCUTc-1l\n",
+      "BCUTc-1h\n",
+      "BCUTp-1l\n",
+      "BCUTp-1h\n",
+      "nBondsD\n",
+      "nBondsT\n",
+      "C2SP1\n",
+      "C1SP2\n",
+      "C3SP2\n",
+      "C1SP3\n",
+      "C2SP3\n",
+      "C3SP3\n",
+      "C4SP3\n",
+      "SCH-3\n",
+      "SCH-5\n",
+      "SCH-6\n",
+      "SC-3\n",
+      "SC-4\n",
+      "SC-5\n",
+      "SPC-4\n",
+      "SP-0\n",
+      "CrippenLogP\n",
+      "VE1_Dt\n",
+      "VE3_Dt\n",
+      "VR1_Dt\n",
+      "nHBd\n",
+      "nwHBd\n",
+      "nHBint2\n",
+      "nHBint3\n",
+      "nHBint4\n",
+      "nHBint5\n",
+      "nHBint6\n",
+      "nHBint7\n",
+      "nHBint8\n",
+      "nHBint9\n",
+      "nHBint10\n",
+      "nHsOH\n",
+      "nHdNH\n",
+      "nHsSH\n",
+      "nHsNH2\n",
+      "nHssNH\n",
+      "nHsNH3p\n",
+      "nHssNH2p\n",
+      "nHsssNHp\n",
+      "nHtCH\n",
+      "nHdCH2\n",
+      "nHCsatu\n",
+      "nHmisc\n",
+      "nsssCH\n",
+      "nddC\n",
+      "ndsN\n",
+      "nsssN\n",
+      "nssssNp\n",
+      "ndO\n",
+      "nssO\n",
+      "nsOm\n",
+      "nsssP\n",
+      "ndS\n",
+      "nssS\n",
+      "ndssS\n",
+      "nddssS\n",
+      "SsI\n",
+      "minHBd\n",
+      "minHBa\n",
+      "minwHBa\n",
+      "minHBint2\n",
+      "minHBint3\n",
+      "minHBint4\n",
+      "minHBint5\n",
+      "minHBint6\n",
+      "minHBint7\n",
+      "minHBint8\n",
+      "minHBint9\n",
+      "minHBint10\n",
+      "minHsOH\n",
+      "minHdsCH\n",
+      "minHCsats\n",
+      "minHCsatu\n",
+      "minsCH3\n",
+      "minssCH2\n",
+      "mindsCH\n",
+      "minsssCH\n",
+      "mindO\n",
+      "minssO\n",
+      "minsF\n",
+      "maxsI\n",
+      "hmax\n",
+      "hmin\n",
+      "ETA_dAlpha_A\n",
+      "ETA_dAlpha_B\n",
+      "ETA_dEpsilon_B\n",
+      "ETA_dEpsilon_D\n",
+      "ETA_dPsi_B\n",
+      "ETA_Shape_P\n",
+      "ETA_Shape_Y\n",
+      "FMF\n",
+      "IC1\n",
+      "ZMIC1\n",
+      "nAtomLC\n",
+      "nAtomP\n",
+      "nAtomLAC\n",
+      "MDEC-22\n",
+      "MDEC-33\n",
+      "MDEO-11\n",
+      "MDEO-12\n",
+      "MDEN-11\n",
+      "MDEN-12\n",
+      "MDEN-13\n",
+      "MDEN-22\n",
+      "MDEN-23\n",
+      "MDEN-33\n",
+      "MLFER_A\n",
+      "MLFER_BH\n",
+      "MLFER_S\n",
+      "PetitjeanNumber\n",
+      "n4Ring\n",
+      "n5Ring\n",
+      "n6Ring\n",
+      "n7Ring\n",
+      "n8Ring\n",
+      "n9Ring\n",
+      "n10Ring\n",
+      "n11Ring\n",
+      "n12Ring\n",
+      "nG12Ring\n",
+      "nFRing\n",
+      "nF5Ring\n",
+      "nF6Ring\n",
+      "nF7Ring\n",
+      "nF8Ring\n",
+      "nF9Ring\n",
+      "nF10Ring\n",
+      "nF11Ring\n",
+      "nF12Ring\n",
+      "nHeteroRing\n",
+      "n3HeteroRing\n",
+      "n4HeteroRing\n",
+      "n6HeteroRing\n",
+      "n8HeteroRing\n",
+      "n10HeteroRing\n",
+      "n11HeteroRing\n",
+      "nF10HeteroRing\n",
+      "LipinskiFailures\n",
+      "JGI2\n",
+      "JGI3\n",
+      "JGI4\n",
+      "JGI5\n",
+      "JGI6\n",
+      "JGI7\n",
+      "JGI8\n",
+      "JGI9\n",
+      "JGI10\n",
+      "VE1_D\n",
+      "VR1_D\n",
+      "WTPT-1\n",
+      "WTPT-2\n",
+      "WTPT-3\n",
+      "XLogP\n",
+      "Class\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = all_train.columns\n",
+    "len(columns)\n",
+    "for column in columns:\n",
+    "    print(column)"
    ]
   },
   {
