notes from meeting with dave

--- a/notebooks/bdrug_workingNeural Network-Copy1.ipynb
+++ b/notebooks/bdrug_workingNeural Network-Copy1.ipynb
@@ -118,27 +118,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>270</th>\n",
+       "      <th>271</th>\n",
+       "      <th>272</th>\n",
+       "      <th>273</th>\n",
+       "      <th>274</th>\n",
+       "      <th>275</th>\n",
+       "      <th>276</th>\n",
+       "      <th>277</th>\n",
+       "      <th>278</th>\n",
+       "      <th>279</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.730986</td>\n",
+       "      <td>0.921982</td>\n",
+       "      <td>-0.157973</td>\n",
+       "      <td>-1.459674</td>\n",
+       "      <td>0.334478</td>\n",
+       "      <td>0.369859</td>\n",
+       "      <td>0.428547</td>\n",
+       "      <td>1.187530</td>\n",
+       "      <td>-0.313013</td>\n",
+       "      <td>-0.179779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.537518</td>\n",
+       "      <td>0.589635</td>\n",
+       "      <td>0.877483</td>\n",
+       "      <td>0.613616</td>\n",
+       "      <td>-0.820161</td>\n",
+       "      <td>-0.338000</td>\n",
+       "      <td>0.806019</td>\n",
+       "      <td>0.234209</td>\n",
+       "      <td>1.225323</td>\n",
+       "      <td>-1.425786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.728855</td>\n",
+       "      <td>0.855233</td>\n",
+       "      <td>-0.157973</td>\n",
+       "      <td>-1.165434</td>\n",
+       "      <td>-0.087522</td>\n",
+       "      <td>0.817984</td>\n",
+       "      <td>1.128209</td>\n",
+       "      <td>0.677041</td>\n",
+       "      <td>2.486413</td>\n",
+       "      <td>-0.179779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.744809</td>\n",
+       "      <td>0.868438</td>\n",
+       "      <td>0.937737</td>\n",
+       "      <td>1.266806</td>\n",
+       "      <td>0.683059</td>\n",
+       "      <td>-0.337961</td>\n",
+       "      <td>0.963520</td>\n",
+       "      <td>0.346804</td>\n",
+       "      <td>1.350914</td>\n",
+       "      <td>-0.382318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.726725</td>\n",
+       "      <td>-0.490926</td>\n",
+       "      <td>-0.157973</td>\n",
+       "      <td>-0.092644</td>\n",
+       "      <td>-0.689763</td>\n",
+       "      <td>0.821746</td>\n",
+       "      <td>0.428547</td>\n",
+       "      <td>0.166552</td>\n",
+       "      <td>-0.313013</td>\n",
+       "      <td>-0.179779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.357465</td>\n",
+       "      <td>0.133398</td>\n",
+       "      <td>0.924800</td>\n",
+       "      <td>0.617204</td>\n",
+       "      <td>-0.217306</td>\n",
+       "      <td>-0.337907</td>\n",
+       "      <td>0.784516</td>\n",
+       "      <td>0.449160</td>\n",
+       "      <td>0.220684</td>\n",
+       "      <td>-0.429355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.724595</td>\n",
+       "      <td>1.783538</td>\n",
+       "      <td>-0.157973</td>\n",
+       "      <td>-2.115771</td>\n",
+       "      <td>1.673549</td>\n",
+       "      <td>0.956781</td>\n",
+       "      <td>2.527533</td>\n",
+       "      <td>-0.854426</td>\n",
+       "      <td>-0.313013</td>\n",
+       "      <td>-0.179779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.697821</td>\n",
+       "      <td>-0.263908</td>\n",
+       "      <td>0.729878</td>\n",
+       "      <td>0.575758</td>\n",
+       "      <td>-0.049837</td>\n",
+       "      <td>-0.337926</td>\n",
+       "      <td>1.128384</td>\n",
+       "      <td>0.467271</td>\n",
+       "      <td>0.824613</td>\n",
+       "      <td>-0.956659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.722464</td>\n",
+       "      <td>1.576920</td>\n",
+       "      <td>-0.157973</td>\n",
+       "      <td>-0.512310</td>\n",
+       "      <td>-0.629174</td>\n",
+       "      <td>0.681700</td>\n",
+       "      <td>0.428547</td>\n",
+       "      <td>0.166552</td>\n",
+       "      <td>-0.313013</td>\n",
+       "      <td>-0.179779</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.861258</td>\n",
+       "      <td>1.818367</td>\n",
+       "      <td>1.639030</td>\n",
+       "      <td>2.540884</td>\n",
+       "      <td>1.382322</td>\n",
+       "      <td>-0.338042</td>\n",
+       "      <td>0.779403</td>\n",
+       "      <td>0.436493</td>\n",
+       "      <td>0.351273</td>\n",
+       "      <td>-0.689293</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 280 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1626, 280)"
+       "        0         1         2         3         4         5         6    \\\n",
+       "0 -1.730986  0.921982 -0.157973 -1.459674  0.334478  0.369859  0.428547   \n",
+       "1 -1.728855  0.855233 -0.157973 -1.165434 -0.087522  0.817984  1.128209   \n",
+       "2 -1.726725 -0.490926 -0.157973 -0.092644 -0.689763  0.821746  0.428547   \n",
+       "3 -1.724595  1.783538 -0.157973 -2.115771  1.673549  0.956781  2.527533   \n",
+       "4 -1.722464  1.576920 -0.157973 -0.512310 -0.629174  0.681700  0.428547   \n",
+       "\n",
+       "        7         8         9    ...       270       271       272       273  \\\n",
+       "0  1.187530 -0.313013 -0.179779  ...  0.537518  0.589635  0.877483  0.613616   \n",
+       "1  0.677041  2.486413 -0.179779  ...  0.744809  0.868438  0.937737  1.266806   \n",
+       "2  0.166552 -0.313013 -0.179779  ...  0.357465  0.133398  0.924800  0.617204   \n",
+       "3 -0.854426 -0.313013 -0.179779  ...  0.697821 -0.263908  0.729878  0.575758   \n",
+       "4  0.166552 -0.313013 -0.179779  ...  0.861258  1.818367  1.639030  2.540884   \n",
+       "\n",
+       "        274       275       276       277       278       279  \n",
+       "0 -0.820161 -0.338000  0.806019  0.234209  1.225323 -1.425786  \n",
+       "1  0.683059 -0.337961  0.963520  0.346804  1.350914 -0.382318  \n",
+       "2 -0.217306 -0.337907  0.784516  0.449160  0.220684 -0.429355  \n",
+       "3 -0.049837 -0.337926  1.128384  0.467271  0.824613 -0.956659  \n",
+       "4  1.382322 -0.338042  0.779403  0.436493  0.351273 -0.689293  \n",
+       "\n",
+       "[5 rows x 280 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train.shape"
+    "x_train.shape\n",
+    "x_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +434,7 @@
        "4        0        1"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,20 +446,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= 13.583344702\n",
-      "Epoch: 0002 cost= 5.395451939\n",
-      "Epoch: 0003 cost= 2.228134196\n",
+      "Epoch: 0001 cost= 45.309838429\n",
+      "Epoch: 0002 cost= 18.951819968\n",
+      "Epoch: 0003 cost= 3.946945846\n",
       "Optimization Finished!\n",
-      "Accuracy: 0.800813\n",
+      "Accuracy: 0.90163934\n",
+      "[[ 0  0]\n",
+      " [ 6 55]]\n",
+      "Accuracy: 0.76829267\n",
       "[[ 42   0]\n",
-      " [ 49 155]]\n"
+      " [ 57 147]]\n"
      ]
     }
    ],
@@ -324,6 +517,16 @@
     "            print(\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \\\n",
     "                \"{:.9f}\".format(avg_cost))\n",
     "    print(\"Optimization Finished!\")\n",
+    "    \n",
+    "    \n",
+    "    correct_prediction = tf.equal(tf.argmax(y, 1), tf.argmax(predictions, 1))\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
+    "    print(\"Accuracy:\", accuracy.eval({x: x_batches[3], y: y_batches[3], keep_prob: 1.0}))\n",
+    "    \n",
+    "    \n",
+    "    confusion = tf.confusion_matrix(labels=tf.argmax(y, 1), predictions=tf.argmax(predictions, 1), num_classes=2) \n",
+    "    print(confusion.eval({x: x_batches[3], y: y_batches[3], keep_prob: 1.0}))  \n",
+    "    \n",
     "    correct_prediction = tf.equal(tf.argmax(y, 1), tf.argmax(predictions, 1))\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
     "    print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
@@ -331,6 +534,15 @@
     "    \n",
     "    confusion = tf.confusion_matrix(labels=tf.argmax(y, 1), predictions=tf.argmax(predictions, 1), num_classes=2) \n",
     "    print(confusion.eval({x: x_test, y: y_test, keep_prob: 1.0}))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "what is the accuracy and confusion matrix for my testing data?"
    ]
   },
   {
